# ai-desktop-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
frontend/: .gitignore  Dockerfile  index.html  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ControlPanel.test.tsx  ControlPanel.tsx  InstructionInput.test.tsx  InstructionInput.tsx  LogPanel.test.tsx  LogPanel.tsx  StatusBar.tsx  StatusPanel.test.tsx  StatusPanel.tsx  VncViewer.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: api.test.ts  api.ts  types.ts
src/ai_desktop_agent/: __init__.py  main.py
src/ai_desktop_agent/actions/: executor.py  primitives.py
src/ai_desktop_agent/agent/: __init__.py  loop.py  state.py
src/ai_desktop_agent/agent/llm/: anthropic_provider.py  base.py  claude_provider.py  factory.py  mock.py  openai_compat_provider.py  types.py
src/ai_desktop_agent/server/: __init__.py  app.py  session.py
src/ai_desktop_agent/vm/: __init__.py  base.py  fake.py  screenshot.py  vnc_client.py
tests/: test_anthropic_provider.py  test_claude_provider.py  test_llm.py  test_loop.py  test_openai_compat_provider.py  test_primitives.py  test_server.py  test_state.py  test_vm_container.py  test_vnc.py
vm/: Dockerfile  build-image.sh  build-vm-image.sh  entrypoint.sh  prepare-image.sh
vm/cloud-init/: meta-data  user-data
websockify/: Dockerfile
